[metadata]
name = FreeBSD-ports
version = 0.0.1
description = Parse FreeBSD Ports INDEX, provide search API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
author = Steve Wills
author_email = steve@mouf.net
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Utilities
    Operating System :: POSIX :: BSD :: FreeBSD
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
    flake8
    ruamel.yaml>=0.15
    six
    typing; python_version<"3.5"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    index_search = FreeBSD-ports:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
