[metadata]
name = FreeBSD-ports
version = "0.0.1"
description = "Parse FreeBSD Ports INDEX, provide search API"
long_description = README.md
long_description_content_type = text/markdown
url = "https://github.com/swills/py-FreeBSD-ports/"
author = "Steve Wills"
author_email = "steve@mouf.net"
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Utilities
    Operating System :: POSIX :: BSD :: FreeBSD
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
packages = find:
tests_require = pytest
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
scripts =
    bin/ports-index-info

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
