[metadata]
name = FreeBSD-ports
version = 0.0.9
description = Parse FreeBSD Ports INDEX, provide search API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swills/py-FreeBSD-ports/
author = "Steve Wills"
author_email = "steve@mouf.net"
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Utilities
    Operating System :: POSIX :: BSD :: FreeBSD
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
tests_require = pytest
python_requires = >=3.6

[options.entry_points]
console_scripts =
    ports-index-info = FreeBSD_ports.__main__:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
